# ffmpeg-android-demo

./: .gitignore  README.md  Readme.txt  settings.gradle
app/: build.gradle
app/libs/arm64-v8a/include/: config.h
app/libs/arm64-v8a/include/fftools/: ffmpeg.h
app/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/libs/armeabi-v7a/include/: config.h
app/libs/armeabi-v7a/include/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jni/: FFmpeg.java
app/src/main/java/com/milanac007/demo/ffmpeg_android_demo/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  android_log.h  com_jni_FFmpeg.c  com_jni_FFmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
